<resources>
    <string name="app_name">AccountBook</string>

    <string name="income">수입</string>
    <string name="expenditure">지출</string>
    <string name="stats_per_category">항목별 수입 / 지출</string>

    <string name="main_fragment_string">메인 화면입니다.</string>
    <string name="list_fragment_string">리스트화면입니다.</string>
    <string name="tab_main_text">메인</string>
    <string name="tab_list_text">리스트</string>

    <string name="content_description_item_icon">Icon for income / expenditure item.</string>

    <string name="sample_won">50,000원</string>
    <string name="sample_time">2월 11일 오후 3:10</string>
    <string name="sample_item_name">피자헛</string>
</resources>