<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".DashboardFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/income" />

    <TextView
        android:id="@+id/tvIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="32sp"
        android:text="@string/sample_won"/>

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expenditure" />

    <TextView
        android:id="@+id/tvExpenditure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="32sp"
        android:text="@string/sample_won"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/stats_per_category"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIncome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExpenditure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>